# resetter

./: .gitignore  Cargo.toml  README.md
dev/: seeds.txt
src/: actions.rs  main.rs  resetter.rs  screen_capture.rs  util.rs
