[package]
name = "resetter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
image = { version = "0.25.1", features = ["jpeg"] }
# inputbot = "0.6.0"
itertools = "0.12.1"
# inputbot = "0.6.0"
mki = "0.2.3"
xcap = "0.0.9"
